[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/World.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Game.gd" type="Script" id=2]
[ext_resource path="res://scenes/InfoPanel.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/ResourceDisplay.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/WorldScroller.gd" type="Script" id=5]
[ext_resource path="res://scenes/PauseMenu.gd" type="Script" id=6]
[ext_resource path="res://scenes/Moon.tscn" type="PackedScene" id=7]
[ext_resource path="res://themes/theme.tres" type="Theme" id=8]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.392157 )

[node name="Game" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 8 )
script = ExtResource( 2 )

[node name="TimerPhase" type="Timer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 700.0

[node name="PanelTop" type="PanelContainer" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 54.0
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelTop"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 47.0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/PanelTop/HBoxContainer"]
margin_right = 300.0
margin_bottom = 40.0
rect_min_size = Vector2( 300, 0 )
mouse_filter = 1

[node name="ResourceDisplay" parent="VBoxContainer/PanelTop/HBoxContainer/MarginContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 300.0
margin_bottom = 40.0

[node name="ContainerTime" type="CenterContainer" parent="VBoxContainer/PanelTop/HBoxContainer"]
margin_left = 304.0
margin_right = 706.0
margin_bottom = 40.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelTop/HBoxContainer/ContainerTime"]
margin_left = 51.0
margin_top = 2.0
margin_right = 351.0
margin_bottom = 38.0

[node name="LabelPhase" type="Label" parent="VBoxContainer/PanelTop/HBoxContainer/ContainerTime/VBoxContainer"]
margin_right = 300.0
margin_bottom = 17.0
text = "Day 1 of 5, Morning"
align = 1
valign = 1

[node name="PhaseProgressBar" type="ProgressBar" parent="VBoxContainer/PanelTop/HBoxContainer/ContainerTime/VBoxContainer"]
margin_top = 21.0
margin_right = 300.0
margin_bottom = 36.0
rect_min_size = Vector2( 300, 15 )
value = 50.0
percent_visible = false

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/PanelTop/HBoxContainer"]
margin_left = 710.0
margin_right = 1010.0
margin_bottom = 40.0
rect_min_size = Vector2( 300, 0 )
mouse_filter = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelTop/HBoxContainer/MarginContainer2"]
margin_right = 300.0
margin_bottom = 40.0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/PanelTop/HBoxContainer/MarginContainer2/HBoxContainer"]
margin_right = 256.0
margin_bottom = 40.0
size_flags_horizontal = 3

[node name="Moon" parent="VBoxContainer/PanelTop/HBoxContainer/MarginContainer2/HBoxContainer" instance=ExtResource( 7 )]
margin_left = 260.0
margin_right = 300.0
margin_bottom = 40.0

[node name="WorldScroller" type="MarginContainer" parent="VBoxContainer"]
margin_top = 58.0
margin_right = 1024.0
margin_bottom = 596.0
rect_min_size = Vector2( 1024, 500 )
rect_clip_content = true
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 5 )

[node name="World" parent="VBoxContainer/WorldScroller" instance=ExtResource( 1 )]

[node name="ContainerButtons" type="GridContainer" parent="VBoxContainer/WorldScroller"]
visible = false
margin_right = 1024.0
margin_bottom = 538.0
mouse_filter = 2
columns = 3

[node name="ButtonTopLeft" type="Button" parent="VBoxContainer/WorldScroller/ContainerButtons"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 40.0
margin_bottom = 40.0

[node name="ButtonTop" type="Button" parent="VBoxContainer/WorldScroller/ContainerButtons"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 44.0
margin_right = 980.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )

[node name="ButtonTopRight" type="Button" parent="VBoxContainer/WorldScroller/ContainerButtons"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 984.0
margin_right = 1024.0
margin_bottom = 40.0

[node name="ButtonLeft" type="Button" parent="VBoxContainer/WorldScroller/ContainerButtons"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 44.0
margin_right = 40.0
margin_bottom = 494.0
rect_min_size = Vector2( 40, 0 )

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/WorldScroller/ContainerButtons"]
margin_left = 44.0
margin_top = 44.0
margin_right = 980.0
margin_bottom = 494.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ButtonRight" type="Button" parent="VBoxContainer/WorldScroller/ContainerButtons"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 984.0
margin_top = 44.0
margin_right = 1024.0
margin_bottom = 494.0
rect_min_size = Vector2( 40, 0 )

[node name="ButtonBottomLeft" type="Button" parent="VBoxContainer/WorldScroller/ContainerButtons"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 498.0
margin_right = 40.0
margin_bottom = 538.0

[node name="ButtonBottom" type="Button" parent="VBoxContainer/WorldScroller/ContainerButtons"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 44.0
margin_top = 498.0
margin_right = 980.0
margin_bottom = 538.0
rect_min_size = Vector2( 0, 40 )

[node name="ButtonBottomRight" type="Button" parent="VBoxContainer/WorldScroller/ContainerButtons"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 984.0
margin_top = 498.0
margin_right = 1024.0
margin_bottom = 538.0

[node name="PanelBottom" type="PanelContainer" parent="VBoxContainer"]
margin_top = 600.0
margin_right = 1024.0
margin_bottom = 700.0
rect_min_size = Vector2( 0, 100 )
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelBottom"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 93.0

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/PanelBottom/HBoxContainer"]
margin_right = 177.0
margin_bottom = 86.0
size_flags_vertical = 3

[node name="InfoPanel" parent="VBoxContainer/PanelBottom/HBoxContainer/CenterContainer" instance=ExtResource( 3 )]
margin_top = 3.0
margin_right = 177.0
margin_bottom = 83.0

[node name="Node2D" type="Node2D" parent="."]
z_index = 4096

[node name="PauseMenu" type="MarginContainer" parent="Node2D"]
pause_mode = 2
visible = false
margin_right = 1024.0
margin_bottom = 700.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 6 )

[node name="Panel" type="Panel" parent="Node2D/PauseMenu"]
margin_right = 1024.0
margin_bottom = 700.0
custom_styles/panel = SubResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="Node2D/PauseMenu"]
margin_right = 1024.0
margin_bottom = 700.0

[node name="PanelContainer" type="PanelContainer" parent="Node2D/PauseMenu/CenterContainer"]
margin_left = 505.0
margin_top = 343.0
margin_right = 519.0
margin_bottom = 357.0

[node name="VBoxContainer" type="VBoxContainer" parent="Node2D/PauseMenu/CenterContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 247.0
margin_bottom = 219.0

[node name="Label" type="Label" parent="Node2D/PauseMenu/CenterContainer/PanelContainer/VBoxContainer"]
margin_right = 240.0
margin_bottom = 14.0
text = "Game Paused"
align = 1

[node name="MarginContainer2" type="MarginContainer" parent="Node2D/PauseMenu/CenterContainer/PanelContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 240.0
margin_bottom = 68.0
custom_constants/margin_bottom = 50

[node name="MarginContainer" type="MarginContainer" parent="Node2D/PauseMenu/CenterContainer/PanelContainer/VBoxContainer"]
margin_top = 72.0
margin_right = 240.0
margin_bottom = 212.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Node2D/PauseMenu/CenterContainer/PanelContainer/VBoxContainer/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 220.0
margin_bottom = 120.0
custom_constants/separation = 20

[node name="ButtonResume" type="Button" parent="Node2D/PauseMenu/CenterContainer/PanelContainer/VBoxContainer/MarginContainer/VBoxContainer"]
margin_right = 200.0
margin_bottom = 40.0
rect_min_size = Vector2( 200, 40 )
text = "Resume"

[node name="ButtonRestart" type="Button" parent="Node2D/PauseMenu/CenterContainer/PanelContainer/VBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 60.0
margin_right = 200.0
margin_bottom = 100.0
rect_min_size = Vector2( 200, 40 )
text = "Restart Game"

[connection signal="timeout" from="TimerPhase" to="." method="_on_TimerPhase_timeout"]
[connection signal="mouse_entered" from="VBoxContainer/WorldScroller/ContainerButtons/ButtonTopLeft" to="VBoxContainer/WorldScroller" method="_on_ButtonTopLeft_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/WorldScroller/ContainerButtons/ButtonTopLeft" to="VBoxContainer/WorldScroller" method="_on_ButtonTopLeft_mouse_exited"]
[connection signal="mouse_entered" from="VBoxContainer/WorldScroller/ContainerButtons/ButtonTop" to="VBoxContainer/WorldScroller" method="_on_ButtonTop_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/WorldScroller/ContainerButtons/ButtonTop" to="VBoxContainer/WorldScroller" method="_on_ButtonTop_mouse_exited"]
[connection signal="mouse_entered" from="VBoxContainer/WorldScroller/ContainerButtons/ButtonTopRight" to="VBoxContainer/WorldScroller" method="_on_ButtonTopRight_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/WorldScroller/ContainerButtons/ButtonTopRight" to="VBoxContainer/WorldScroller" method="_on_ButtonTopRight_mouse_exited"]
[connection signal="mouse_entered" from="VBoxContainer/WorldScroller/ContainerButtons/ButtonLeft" to="VBoxContainer/WorldScroller" method="_on_ButtonLeft_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/WorldScroller/ContainerButtons/ButtonLeft" to="VBoxContainer/WorldScroller" method="_on_ButtonLeft_mouse_exited"]
[connection signal="mouse_entered" from="VBoxContainer/WorldScroller/ContainerButtons/ButtonRight" to="VBoxContainer/WorldScroller" method="_on_ButtonRight_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/WorldScroller/ContainerButtons/ButtonRight" to="VBoxContainer/WorldScroller" method="_on_ButtonRight_mouse_exited"]
[connection signal="mouse_entered" from="VBoxContainer/WorldScroller/ContainerButtons/ButtonBottomLeft" to="VBoxContainer/WorldScroller" method="_on_ButtonBottomLeft_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/WorldScroller/ContainerButtons/ButtonBottomLeft" to="VBoxContainer/WorldScroller" method="_on_ButtonBottomLeft_mouse_exited"]
[connection signal="mouse_entered" from="VBoxContainer/WorldScroller/ContainerButtons/ButtonBottom" to="VBoxContainer/WorldScroller" method="_on_ButtonBottom_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/WorldScroller/ContainerButtons/ButtonBottom" to="VBoxContainer/WorldScroller" method="_on_ButtonBottom_mouse_exited"]
[connection signal="mouse_entered" from="VBoxContainer/WorldScroller/ContainerButtons/ButtonBottomRight" to="VBoxContainer/WorldScroller" method="_on_ButtonBottomRight_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/WorldScroller/ContainerButtons/ButtonBottomRight" to="VBoxContainer/WorldScroller" method="_on_ButtonBottomRight_mouse_exited"]
[connection signal="restart" from="Node2D/PauseMenu" to="." method="_on_PauseMenu_restart"]
[connection signal="resume" from="Node2D/PauseMenu" to="." method="_on_PauseMenu_resume"]
[connection signal="pressed" from="Node2D/PauseMenu/CenterContainer/PanelContainer/VBoxContainer/MarginContainer/VBoxContainer/ButtonResume" to="Node2D/PauseMenu" method="_on_ButtonResume_pressed"]
[connection signal="pressed" from="Node2D/PauseMenu/CenterContainer/PanelContainer/VBoxContainer/MarginContainer/VBoxContainer/ButtonRestart" to="Node2D/PauseMenu" method="_on_ButtonRestart_pressed"]
